tests/idris2/interface015/expected
1/1: Building gnu (gnu.idr)
Error: While processing right hand side of TestSurprise1. Multiple solutions found in search of:
    Gnu

gnu.idr:47:27--47:32
    |
 47 | TestSurprise1 gnu1 gnu2 = Guess
    |                           ^^^^^

Possible correct results:
    gnu1
    gnu2
Error: While processing right hand side of TestSurprise2. Multiple solutions found in search of:
    Gnu

gnu.idr:50:21--50:26
    |
 50 | TestSurprise2 f g = Guess
    |                     ^^^^^

Possible correct results:
    f ()
    g ()
Error: While processing right hand side of TestSurprise3. Can't find an implementation for Gnu.

gnu.idr:53:19--53:24
    |
 53 | TestSurprise3 f = Guess
    |                   ^^^^^

